--- a/compose/local/node/Dockerfile
+++ b/compose/local/node/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY ./package.json /app
 
-RUN npm install && npm cache clean --force
+# Install npm packages with BuildKit cache mount for faster rebuilds
+RUN --mount=type=cache,target=/root/.npm \
+    npm install && npm cache clean --force
 
 ENV PATH=./node_modules/.bin/:$PATH
