--- a/.dockerignore
+++ b/.dockerignore
@@ -15,3 +15,7 @@ venv
 # Documentation (kept in Git but excluded from Docker context)
 docs/
 *.md
+
+# Development-specific scripts (exclude from production builds)
+scripts/seed_dev_data.py
+scripts/README.md
