--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -18,8 +18,7 @@ services:
     volumes:
       - .:/app:z
     env_file:
-      - ./.envs/.local/.django
-      - ./.envs/.local/.postgres
+      - ./.env
     ports:
       - '8000:8000'
     command: /start
@@ -36,7 +35,7 @@ services:
       - simlane_local_postgres_data:/var/lib/postgresql/data
       - simlane_local_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.local/.postgres
+      - ./.env
 
   mailpit:
     image: docker.io/axllent/mailpit:latest
