--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,8 +12,7 @@ services:
       - postgres
       - redis
     env_file:
-      - ./.envs/.production/.django
-      - ./.envs/.production/.postgres
+      - ./.env
     command: /start
 
   postgres:
@@ -25,7 +24,7 @@ services:
       - production_postgres_data:/var/lib/postgresql/data
       - production_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.production/.postgres
+      - ./.env
 
   traefik:
     build:
@@ -72,6 +71,6 @@ services:
       context: .
       dockerfile: ./compose/production/aws/Dockerfile
     env_file:
-      - ./.envs/.production/.django
+      - ./.env
     volumes:
       - production_postgres_data_backups:/backups:z
