--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,7 @@ services:
     volumes:
       - .:/app:z
     env_file:
-      - ./.envs/.local/.django
-      - ./.envs/.local/.postgres
+      - ./.env
     ports:
       - '8000:8000'
     command: /start
@@ -39,7 +38,7 @@ services:
       - simlane_local_postgres_data:/var/lib/postgresql/data
       - simlane_local_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.local/.postgres
+      - ./.env
 
   mailpit:
     image: docker.io/axllent/mailpit:latest
